[package]
name = "http-body-reader"
version = "0.1.2"
rust-version = "1.81"
edition = "2021"

description = "A convenient way to read the http body."
license = "MIT OR Apache-2.0"
repository = "https://github.com/alekseysidorov/http-body-reader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10"
http = "1.2.0"
http-body = "1.0"
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
thiserror = "2.0"

[dev-dependencies]

[features]
default = ["json", "form"]
json = ["dep:serde_json"]
form = ["dep:serde_urlencoded"]


[lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "warn"
module_name_repetitions = "allow"
pedantic = { level = "warn", priority = -1 }

[lints.rustdoc]
broken_intra_doc_links = "deny"
