[package]
name = "http-body-reader"
version = "0.1.0"
rust-version = "1.81"
edition = "2021"

description = "A convenient way to read the http body."
license = "MIT OR Apache-2.0"
repository = "https://github.com/alekseysidorov/http-body-reader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10"
http = "1.2.0"
http-body = "1.0"
http-body-util = "0.1"
include-utils = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
thiserror = "2.0"

[dev-dependencies]
anyhow = "1.0"
reqwest = "0.12.12"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
tower-reqwest = "0.4.1"
tower-service = "0.3.3"

[features]
default = ["json", "form"]
json = ["dep:serde_json"]
form = ["dep:serde_urlencoded"]

[[example]]
name = "read_json"
required-features = ["json"]

[[example]]
name = "read_form"
required-features = ["form"]

[lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "warn"
module_name_repetitions = "allow"
pedantic = { level = "warn", priority = -1 }

[lints.rustdoc]
broken_intra_doc_links = "deny"
